2010-08-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/Makefile.am, libchip/preinstall.am: Install
	<libchip/ata_internal.h>.

2010-08-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/ide/ata_util.c: New file.
	* libchip/Makefile.am: Reflect change from above.
	* libchip/ide/ata.c: Moved ata_breq_init(), ata_identify_device(), and
	ata_process_request_on_init_phase() into new file.

2010-08-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/ide/ata_internal.h, libchip/ide/ata.c: Moved code into
	separate functions.  Added public ata_breq_init(),
	ata_identify_device(), and ata_process_request_on_init_phase()
	functions.

2010-06-24	Arnout Vandecappelle <arnout@mind.be>

	PR 1586/misc
	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: Add retries to
	SD card accesses.

2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1580/misc
	* libchip/i2c/spi-sd-card.c: Use bigger chunks and yield processor
	while waiting for read data.

2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1579/misc
	* libchip/i2c/spi-sd-card.c: Gradually increasing sleep times when
	waiting for write to finish.

2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1567/misc
	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: Fixed
	timeouts.

2010-06-21	Arnout Vandecappelle <arnout@mind.be>

	PR 1576/misc
	* libchip/i2c/spi-sd-card.c: Enable CRC checks.

2010-06-21	Arnout Vandecappelle <arnout@mind.be>

	PR 1569/misc
	* libchip/i2c/spi-sd-card.c: Added CRC checks.

2010-06-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1561/cpukit
	* aclocal/rtems-cpu-subdirs.m4: Merge SPARC64 port.

2010-06-14	Arnout Vandecappelle <arnout@mind.be>

	PR 1557/misc
	* libchip/i2c/spi-sd-card.c: Fixed low capacity special case.

2010-06-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.11.
	Bump _RTEMS_VERSION to 4.10.99.0.

2010-06-03	Joel Sherrill <joel.sherrilL@OARcorp.com>
